# Search_Engine_4

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  SearchEngine  main.cpp
Files/: file001.txt  file002.txt  file003.txt  file004.txt
config/: answers.json  config.json  requests.json
git/: .gitignore
include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h  SearchServer.h
src/: CMakeLists.txt  CmakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  CmakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp  SearchServer_test.cpp
